refactor: export token out of app and re-organize code

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trail Seeker</title>
+    <title>Mtn Maps</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <!-- <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.0/mapbox-gl-css' rel='stylesheet' />
