--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Mtn Maps</title>
-    <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <!-- <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.0/mapbox-gl-css' rel='stylesheet' />
-    <link href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css' /> -->
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme color" content"#000000">
+
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.0/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css' />
+    <link href='styles.css' rel='stylesheet' />
+
+    <title>Mtn Maps</title>
   </head>
   <body>
     <div id='map'></div>
